kubernetes/catalog/microbin/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/Joshndroid/joshndroid-unraid-docker-templates/main/templates/microbin.xml
# Category: Network-Web
# Stars: 29 | Downloads: 1304959
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microbin
  namespace: microbin
  labels:
    app.kubernetes.io/name: microbin
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: microbin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: microbin
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: microbin
          image: danielszabo99/microbin
          ports:
            - containerPort: 8080
              protocol: TCP
              name: port
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            failureThreshold: 10
          volumeMounts:
            - name: microbin-data-0
              mountPath: "/app"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: microbin-data-0
        persistentVolumeClaim:
          claimName: microbin-data-0
---
apiVersion: v1
kind: Service
metadata:
  name: microbin
  namespace: microbin
  labels:
    app.kubernetes.io/name: microbin
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: microbin
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: port
  type: ClusterIP
