kubernetes/catalog/microbin/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: microbin
  namespace: microbin
  labels:
    app.kubernetes.io/name: microbin
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`microbin.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: microbin
          port: 8080
  tls:
    secretName: int-rlservers-com-tls
